// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Wrapper /> it renders a dark Wrapper 1`] = `
.c0 {
  padding: 1rem 2rem;
  color: #3e486e;
  border: 1px solid #bbcadf;
  border-radius: 0.6rem;
  background-color: #e4e8ef;
}

.c0 > *:first-child {
  margin-top: 0;
}

.c0 > *:last-child {
  margin-bottom: 0;
}

@media (max-width:600px) {
  .c0 {
    padding: 1rem 2rem;
  }
}

@media print {
  .c0 {
    padding: 0 5pt;
    border: none;
  }
}

<div>
  <div
    class="c0"
  >
    this is a Button 
    dark
     
  </div>
</div>
`;

exports[`<Wrapper /> it renders a default Wrapper 1`] = `
.c0 {
  padding: 1rem 2rem;
  color: #3e486e;
  border: 1px solid #bbcadf;
  border-radius: 0.6rem;
  border-color: transparent;
}

.c0 > *:first-child {
  margin-top: 0;
}

.c0 > *:last-child {
  margin-bottom: 0;
}

@media (max-width:600px) {
  .c0 {
    padding: 1rem 2rem;
  }
}

@media print {
  .c0 {
    padding: 0 5pt;
    border: none;
  }
}

<div>
  <div
    class="c0"
  >
    this is a Button 
    default
     
  </div>
</div>
`;

exports[`<Wrapper /> it renders a light Wrapper 1`] = `
.c0 {
  padding: 1rem 2rem;
  color: #3e486e;
  border: 1px solid #bbcadf;
  border-radius: 0.6rem;
  background-color: #fff;
}

.c0 > *:first-child {
  margin-top: 0;
}

.c0 > *:last-child {
  margin-bottom: 0;
}

@media (max-width:600px) {
  .c0 {
    padding: 1rem 2rem;
  }
}

@media print {
  .c0 {
    padding: 0 5pt;
    border: none;
  }
}

<div>
  <div
    class="c0"
  >
    this is a Button 
    light
     
  </div>
</div>
`;

exports[`<Wrapper /> should render a large wrapper 1`] = `
.c0 {
  padding: 1rem 2rem;
  color: #3e486e;
  border: 1px solid #bbcadf;
  border-radius: 0.6rem;
  padding: 3.2rem 4rem;
  border-color: transparent;
}

.c0 > *:first-child {
  margin-top: 0;
}

.c0 > *:last-child {
  margin-bottom: 0;
}

@media (max-width:600px) {
  .c0 {
    padding: 1rem 2rem;
  }
}

@media print {
  .c0 {
    padding: 0 5pt;
    border: none;
  }
}

<div>
  <div
    class="c0"
  >
    I am a large wrapper
  </div>
</div>
`;
